@@ -10,6 +10,11 @@ Change History
 - Clean up Popen handling in encryption, add some logging. (Thanks, The Code Distillery)
   [smcmahon]
 
+- Remove undesirable doc strings from custom script adapter methods.
+  (Thanks, The Code Distillery)
+  [smcmahon]
+
+
 1.7.8 2012-04-10
 ----------------
 
